<resources>
    <string name="app_name">PetLover</string>
    <string name="welcome_text">Be happy and Enjoy with pet</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email_num">Email or Phone Number</string>
    <string name="login_in_password">Password</string>
    <string name="login_other_way">Or Login with</string>
    <string name="Google">Google</string>
    <string name="facebook">Facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="preload_text1">Find a new pet for you</string>
    <string name="preload_view2_text">Find best product for your beloved per</string>
    <string name="preload_view3_text">Find the nearest pet from your location</string>
    <string name="space" />
    <string name="text_reg_name">Name</string>
    <string name="text_reg_name_hint">input your name</string>
    <string name="text_reg_phone">Phone</string>
    <string name="text_reg_phone_hint">input your phone</string>
    <string name="text_reg_email">Email</string>
    <string name="text_reg_email_hint">input your email</string>
    <string name="text_reg_password">Password</string>
    <string name="text_reg_password_hint">input your password</string>
    <string name="text_reg_hint">By tapping Register with Google or Facebook. You agree to the Terms of Use and Privacy Policy.</string>
    <string name="text_confirm_phoneNum">Confirm Your Number</string>
    <string name="text_confirm_phoneNum_info">We have sent a 4-digit code to +628190124578</string>
    <string name="text_reg_resent_code">Didn\'t receive the code?</string>
    <string name="text_reg_resend">Resend</string>
    <string name="text_home_shop">Shop</string>
    <string name="text_home_adoption">Adoption</string>
    <string name="text_home_veterinarian">Veterinarian</string>
    <string name="text_home_treatment">Treatment</string>
    <string name="text_home_hello">Hello, Good Morning!</string>
    <string name="text_home_username">Amel Jane</string>
    <string name="Home_insight_for_you">Insight For You</string>
    <string name="see_more">See more</string>
    <string name="latest_adoptions">Latest Adoptions</string>
    <string name="home_pet1_name">Maya</string>
    <string name="home_pet1_old">1 Years</string>
    <string name="home_pet1_gender">Female</string>
    <string name="home_pet2_name">Kitten</string>
    <string name="home_pet2_old">0.5 Years</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profill">Profill</string>
    <string name="profile">Profile</string>
    <string name="about_apps">About Apps</string>
    <string name="version_app">Version App 1.0</string>
    <string name="faq">FAQ</string>
    <string name="rating_apps">Rating Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="address">Address</string>
    <string name="email_hint">Amelcamel@gmail.com</string>
    <string name="address_hint">xx(provence) xx()</string>
    <string name="amel">Amel</string>
    <string name="phoneNum_hint">199xxxxxxxx</string>
    <string name="save">Save</string>
    <string name="what_is_a_pet_lovers_app">What is a pet lovers app?\n\nPet lovers application is an application intended for pet lovers. This application has shop, addoption, veterinarian, and treatment features.</string>
    <string name="can_i_sell_my_pet">Can I sell my pet?</string>
    <string name="how_is_the_adoption_process">How is the adoption process?</string>
    <string name="shop">Shop</string>
    <string name="shop_info">Find the best product or pet</string>
    <string name="shop_product">PRODUCT</string>
    <string name="shop_pet">PET</string>
    <string name="product">PRODUCT</string>
    <string name="shop_pet_search">2 year old dog</string>
    <string name="shop_kind_info">200 Pet Available</string>
    <string name="shop_pet1_price">$40</string>
    <string name="text_shop_pet1_name">Ichigo</string>
    <string name="text_shop_pet1_old">0.7 Years</string>
    <string name="text_shop_pet1_price">$40</string>
    <string name="text_shop_pet2_name">Icaa</string>
    <string name="text_shop_pet2_old">0.5 Years</string>
    <string name="text_shop_pet2_price">$10</string>
    <string name="text_shop_pet3_name">Kimberl</string>
    <string name="text_shop_pet3_old">1.2 Years</string>
    <string name="text_shop_pet3_price">$10</string>
    <string name="text_shop_pet4_name">Koto</string>
    <string name="text_shop_pet4_old">3 Years</string>
    <string name="text_shop_pet4_price">$10</string>
    <string name="shop_product1_name">Cute glasses</string>
    <string name="shop_product1_fit">Dog</string>
    <string name="shop_product1_price">$10</string>
    <string name="shop_product2_name">Pet bag</string>
    <string name="shop_product2_fit">Cat</string>
    <string name="shop_product2_price">$79</string>
    <string name="shop_product3_name">Fresh Kisses</string>
    <string name="shop_product3_fit">Dog</string>
    <string name="shop_product3_price">$25</string>
    <string name="shop_product4_name">Carrot Fresh</string>
    <string name="shop_product4_fit">Rabbit</string>
    <string name="shop_product4_price">$25</string>
    <string name="text_item_title">Pet</string>
    <string name="text_item1_info">The British Shorthair is a breed version of the traditional British domestic cat, with a distinctively stocky build, thick coat and broad face. The most recognized color variant is \"British Blue\", with a solid gray-blue coat, orange eyes, and a medium-sized tail.</string>
    <string name="itemInfo_chatSeller">Chat Seller</string>
    <string name="itemInfo_continue">Continue</string>
    <string name="veterinarian_title">Veterinarian</string>
    <string name="nearest_veterinarian">Nearest Veterinarian</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="veterinarian_profile">Veterinarian Profile</string>
    <string name="veterinarian_name">Jaxson Calzoni</string>
    <string name="clinic_name">One Stop Clinic</string>
    <string name="veterna_experience">Experience \n5 Years</string>
    <string name="text_home_personalized">DIY</string>
    <string name="dialogue">该宠物猫饮水较多，运动较少且稀便\n\n可能原因： \n   1.疾病健康问题 \n   2.饮食问题 \n   3.运动问题 计划制定 \n\n   1.如果您的宠物猫患有健康问题，请 立即带它去看兽医，以获取准确的诊 断和治疗建议 \n   2.确保为您的宠物猫提供高质量的猫 粮和足够的水，以避免过多的盐分和 碳水化合物。 \n  3.确保您的宠物猫有足够的运动和娱 乐，例如玩具、活动和探险等，以避 免肥胖和运动能力下降。 \n  4.监测您的宠物猫的体重和便便情况 ，并记录任何变化。如果有任何不寻 常的症状，请及时与兽医联系。</string>
    <string name="title_activity_map">map</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>